UtahLiveDataTest/src/objects/TaskScheduleDetail__c.object
<CustomObject>
    <description>[Business] Need more Details Maps Task Group Task to a schedule (Can be DOH specific)</description>
    <fields>
        <fullName>AssigedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assiged To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Task_Schedule_Detail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Task_Schedule_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descrption__c</fullName>
        <label>Descrption</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HideCloseBtn__c</fullName>
        <formula>NOT(AND( IsPublished__c = true , TaskScheduleGroup__r.AssignedTo__c =  $User.Id,text(Status__c) != &apos;Closed&apos; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideCloseBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideCompleteBtn__c</fullName>
        <formula>not(AND(OR(TEXT(Status__c ) = &apos;In Progress&apos;,TEXT(Status__c ) = &apos;Not Started&apos;), AssignedTo__c =  $User.Id, IsPublished__c = true ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideCompleteBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditButton__c</fullName>
        <formula>NOT(AND(TEXT(Status__c ) = &apos;Not Started&apos;,  TaskScheduleGroup__r.AssignedTo__c =  $User.Id ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideReopenBtn__c</fullName>
        <formula>NOT(AND(TEXT(Status__c ) = &apos;Completed&apos;, TaskScheduleGroup__r.AssignedTo__c =  $User.Id ))</formula>
        <label>Hide Reopen Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPublished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentID__c</fullName>
        <formula>TaskScheduleGroup__r.TaskSchedule__r.ParentId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Object ParentID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendReminderBeforeEndDate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, reminder email will be sent to Assigned user 7 days before End Date.</inlineHelpText>
        <label>Send Reminder Before End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendReminderBeforeStartDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminder Before Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Purpose of the task - Subject can support merge fields {!Name}. These fields will be replaced with a value from the parent record</description>
        <inlineHelpText>Purpose of the task</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskScheduleGroup__c</fullName>
        <label>Task Schedule Group</label>
        <referenceTo>TaskScheduleGroup__c</referenceTo>
        <relationshipLabel>Task Schedule Detail</relationshipLabel>
        <relationshipName>TaskScheduleDetail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Temp_Field__c</fullName>
        <formula>True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tempPercentField__c</fullName>
        <label>Percent Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Task Schedule Detail</label>
    <nameField>
        <displayFormat>TDN-{0000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Schedule Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assigned_To_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(AssignedTo__c )</errorConditionFormula>
        <errorMessage>Please fill Assigned To field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( EndDate__c )</errorConditionFormula>
        <errorMessage>Please fill a valid due date for sub task.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(or(ISCHANGED( EndDate__c ),isnew()), EndDate__c &lt; TODAY()), true, false)</errorConditionFormula>
        <errorMessage>Due Date cannot be earlier than Today’s Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_less_that_Start_date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate__c &gt;  EndDate__c</errorConditionFormula>
        <errorMessage>Start date cannot be greater than Due  date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Past_End_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISCHANGED( StartDate__c ), StartDate__c &lt; TODAY()), true, false)</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>Start date should be greater than or equal to  today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Past_Start_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISCHANGED( StartDate__c ), StartDate__c &lt; TODAY()), true, false)</errorConditionFormula>
        <errorMessage>Start date should be greater than or equal to  today</errorMessage>
    </validationRules>
</CustomObject>